deployments/kubernetes/services/stats-reader/stats-reader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-reader
  namespace: payment-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-reader
  template:
    metadata:
      labels:
        app: stats-reader
    spec:
      serviceAccountName: app
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: stats-reader
          image: ghcr.io/__GHCR_OWNER__/microservice-payment-gateway-grpc/stats-reader:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50062
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
